--- a/ServerSide/Modules/Players/FinanceGameinator.Players.IoC/FinanceGameinator.Players.IoC.csproj
+++ b/ServerSide/Modules/Players/FinanceGameinator.Players.IoC/FinanceGameinator.Players.IoC.csproj
@@ -4,12 +4,15 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Configurations>Debug;Release;ReleaseMultiPublish</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amazon.Lambda.Logging.AspNetCore" Version="3.1.0" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.301.2" />
     <PackageReference Include="CleanHandling" Version="1.0.9" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
