feat: adding game registration and game get by code

--- a/ServerSide/Modules/Games/FinanceGameinator.Games.IoC/FinanceGameinator.Games.IoC.csproj
+++ b/ServerSide/Modules/Games/FinanceGameinator.Games.IoC/FinanceGameinator.Games.IoC.csproj
@@ -16,6 +16,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\FinanceGameinator.Shared.Logger\FinanceGameinator.Shared.Logger.csproj" />
+    <ProjectReference Include="..\FinanceGameinator.Games.Db\FinanceGameinator.Games.Db.csproj" />
+    <ProjectReference Include="..\FinanceGameinator.Games.UseCases\FinanceGameinator.Games.UseCases.csproj" />
   </ItemGroup>
 
 </Project>
